homarr/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homarr-svc
  name: homarr
  namespace: homarr
spec:
  ports:
    - port: 7575
      protocol: TCP
      targetPort: 7575
  selector:
    app: homarr-svc
  type: ClusterIP
